# StairMapping

./: .gitignore  log2.txt  log3.txt
src/stair_mapping/: CMakeLists.txt  package.xml
src/stair_mapping/launch/: model_match.launch  offline_pcl_data.launch  offline_rgbd_data.launch  offline_rtab_mapping.launch  rtabmap.launch
src/stair_mapping/msg/: GaitPhase.msg  RobotTipState.msg
src/stair_mapping/rviz/: offline_data_view.rviz
src/stair_mapping/src/: ElevationGrid.cpp  ElevationGrid.h  GlobalMap.cpp  GlobalMap.h  HeightMap.cpp  HeightMap.h  HeightMapNode.cpp  HeightMapNode.h  ImageProcessor.cpp  ImageProcessor.h  PclProcessor.cpp  PclProcessor.h  PointType.h  PoseErrorTerm.h  PoseGraph.cpp  PoseGraph.h  PreProcessor.cpp  PreProcessor.h  RGBD-SLAM-TerrainReconstruction algo.md  RobotKinetics.cpp  RobotKinetics.h  RobotTf.cpp  RobotTf.h  RobotTfBroadcastNode.cpp  RobotTfBroadcastNode.h  SubMap.cpp  SubMap.h  Terrain3dMapper.cpp  Terrain3dMapper.h  Terrain3dMapperNode.cpp  Terrain3dMapperNode.h  TerrainMapper.cpp  TerrainMapper.h  clip_pcl_data_node.cpp  height_map_node.cpp  img_process_node.cpp  pcl_process_node.cpp  robot_tf_broadcast_node.cpp  stair_kp_extract_node.cpp  stair_model_match_node.cpp  (+2 more)
src/stair_mapping/urdf/: hex_mini_model.urdf
