<?xml version="1.0"?>
<package format="2">
  <name>stair_mapping</name>
  <version>0.0.0</version>
  <description>The stair_mapping package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="qiaosun1234@gmail.com">qiao sun</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mini_bridge</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>open3d_conversions</depend>
  <depend>roslib</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
